[b] - Fix overflow error

--- a/static/css/packages/show.scss
+++ b/static/css/packages/show.scss
@@ -422,7 +422,7 @@
           display: inline-block;
           border: none;
           white-space: pre;
-          overflow: hidden;
+          overflow-x: scroll;
         }
 
         pre {
